RESOLVED FIXED187690
[iOS apps on macOS] Playing embedded Twitter videos in the News app crashes the web process
https://bugs.webkit.org/show_bug.cgi?id=187690
Summary [iOS apps on macOS] Playing embedded Twitter videos in the News app crashes t...
Wenson Hsieh
Reported 2018-07-15 19:27:27 PDT
Attachments
Patch (2.29 KB, patch)
2018-07-15 19:52 PDT, Wenson Hsieh
no flags
ChangeLog tweak (2.60 KB, patch)
2018-07-15 20:15 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-07-15 19:52:04 PDT
Wenson Hsieh
Comment 2 2018-07-15 20:15:04 PDT
Created attachment 345075 [details] ChangeLog tweak
Tim Horton
Comment 3 2018-07-15 21:51:46 PDT
Comment on attachment 345075 [details] ChangeLog tweak Ha! This makes so much sense.
Wenson Hsieh
Comment 4 2018-07-15 21:53:03 PDT
Comment on attachment 345075 [details] ChangeLog tweak Thanks for the review!
WebKit Commit Bot
Comment 5 2018-07-15 22:19:49 PDT
Comment on attachment 345075 [details] ChangeLog tweak Clearing flags on attachment: 345075 Committed r233841: <https://trac.webkit.org/changeset/233841>
WebKit Commit Bot
Comment 6 2018-07-15 22:19:51 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2018-07-17 15:46:01 PDT
Comment on attachment 345075 [details] ChangeLog tweak View in context: https://bugs.webkit.org/attachment.cgi?id=345075&action=review > Source/WebCore/platform/graphics/avfoundation/objc/AVFoundationMIMETypeCache.mm:97 > +#if PLATFORM(IOSMAC) Why does the same issue not impact other configurations? It seems fragile that the only do the safe thing on IOSMAC.
Wenson Hsieh
Comment 8 2018-07-17 15:48:24 PDT
(In reply to Alexey Proskuryakov from comment #7) > Comment on attachment 345075 [details] > ChangeLog tweak > > View in context: > https://bugs.webkit.org/attachment.cgi?id=345075&action=review > > > Source/WebCore/platform/graphics/avfoundation/objc/AVFoundationMIMETypeCache.mm:97 > > +#if PLATFORM(IOSMAC) > > Why does the same issue not impact other configurations? It seems fragile > that the only do the safe thing on IOSMAC. It doesn't impact macOS because we don't need to dynamically load iOS-only symbols there. In this case (on iosmac), we were failing to link symbols in AudioSessionIOS, which is not compiled on macOS.
Note You need to log in before you can comment on or make changes to this bug.